<resources>
    <string name="app_name">Pokedex</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="salir">Salir</string>
    <string name="Perfil">Perfil</string>

    <string name="favorito">Favoritos</string>
    <string name="todos">Pokédex</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Macho">Macho</string>
    <string name="Femenino">Femenino</string>
    <string name="Shiny">Shiny</string>
    <string name="Shiny2">Shiny Femenino</string>
    <string name="Img">Imagenes</string>


</resources>
