<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetallePokemon" android:orientation="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageView
                android:id="@+id/img_oficial3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/ic_launcher"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"/>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/lblNum2"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nombre"
                    android:textSize="25sp"
                    android:textStyle="bold" android:textColor="@color/colorPokedexRojo"/>

            <TextView
                    android:id="@+id/lblNombre2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Descripcion "
                    android:layout_marginBottom="15dp"
                    android:layout_marginRight="10dp" android:textColor="@color/colorPokedexOscuro"
                    android:textSize="24sp"/>

        </LinearLayout>

    </LinearLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPokedexRojo"
            android:layout_below="@+id/img_oficial"
            android:layout_marginTop="11dp" android:id="@+id/espacio"/>
    <TextView
            android:text="@string/Img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView4" android:textStyle="bold"
            android:textAlignment="viewStart" android:textSize="18sp" android:textColor="@color/colorPokedexOscuro"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:gravity="center">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/LL_1">
            <TextView
                    android:text="@string/Macho"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/lbl1" android:textSize="15sp"/>
            <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp" app:srcCompat="@drawable/c_pokemongggo"
                    android:id="@+id/img1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/LL_2" android:visibility="visible">
            <TextView
                    android:text="@string/Femenino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/lbl2" android:textSize="15sp"/>
            <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp" app:srcCompat="@drawable/c_pokemongggo"
                    android:id="@+id/img2"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/LL_3">
            <TextView
                    android:text="@string/Shiny"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/lbl3" android:textSize="15sp"/>
            <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp" app:srcCompat="@drawable/c_pokemongggo"
                    android:id="@+id/img3"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/LL_4">
            <TextView
                    android:text="@string/Shiny2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/lbl4" android:textSize="15sp"/>
            <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp" app:srcCompat="@drawable/c_pokemongggo"
                    android:id="@+id/img4"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView5" android:layout_weight="1"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView6" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>